--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">高雄市新興區錦田路101巷9-3號0936160386
           <a href="mailto:name@email.com">name@email.com</a>
         </div>
-        <p class="lead mb-5">喜歡觸手</p>
+        <p class="lead mb-5">喜歡觸手 I love tentacles</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
