--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
+  
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet">
   <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/myresume.css" rel="stylesheet">
 
 </head>
 
@@ -67,7 +70,7 @@
           <span class="text-primary">Kevin</span>
         </h1>
         <div class="subheading mb-5">高雄市新興區錦田路101巷9-3號0936160386
-          <a href="mailto:name@email.com">name@email.com</a>
+          <a href="mailto:name@email.com">w0987562477@gmail.com</a>
         </div>
         <p class="lead mb-5">喜歡觸手 I love tentacles</p>
         <div class="social-icons">
