--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="王哲賢的個人網站">
   <meta name="author" content="王哲賢">
 
-  <title>王哲賢的個人網站喔Resume - Start Bootstrap Theme</title>
+  <title>王哲賢的宅網Resume - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
