充實內容和增加表格

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="王哲賢的個人網站">
   <meta name="author" content="王哲賢">
 
-  <title>王哲賢的宅網Resume - Start Bootstrap Theme</title>
+  <title>王哲賢的小宅圈Resume - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
         <div class="subheading mb-5">高雄市新興區錦田路101巷9-3號0936160386
           <a href="mailto:name@email.com">w0987562477@gmail.com</a>
         </div>
-        <p class="lead mb-5">喜歡觸手 I love tentacles</p>
+        <p class="lead mb-5">經典廢宅 平時打game吃吃睡睡看看小說I usually playing video games,eating snacks,sleeping and reading novels in my free time</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -251,7 +251,48 @@
     </section>
 
     <hr class="m-0">
+<div id="accordion">
 
+  <div class="card">
+    <div class="card-header">
+      <a class="card-link" data-toggle="collapse" href="#collapseOne">
+        Collapsible Group Item #1
+      </a>
+    </div>
+    <div id="collapseOne" class="collapse show" data-parent="#accordion">
+      <div class="card-body">
+        Lorem ipsum..
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+        Collapsible Group Item #2
+      </a>
+    </div>
+    <div id="collapseTwo" class="collapse" data-parent="#accordion">
+      <div class="card-body">
+        Lorem ipsum..
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+        Collapsible Group Item #3
+      </a>
+    </div>
+    <div id="collapseThree" class="collapse" data-parent="#accordion">
+      <div class="card-body">
+        Lorem ipsum..
+      </div>
+    </div>
+  </div>
+
+</div>
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">興趣</h2>
@@ -264,14 +305,14 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">未來期許</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            工作</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            家庭</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
