--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">童年</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <div class="subheading mb-3">喜愛閱讀，內化自己</div>
+            <p>由於我生性內向，不善與人來往交友，故我以書為友，在書海中審視自身。一開始我只是享受故事內容，但漸漸的我將自身投射在書中腳色身上，並開始問:「如果是我，我會...」久而久之，我養成了內省的習慣。</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">September 2007-September 2013</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">中學</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <div class="subheading mb-3">循規蹈矩，韜光養晦</div>
+            <p>國中時，我除了保持每日閱讀的習慣，還為了訓練膽識加入了說唱藝術社並成為社長，在這段訓練時光中我的台上本領日趨精進，不只台風逐漸穩健，人際關係也逐漸變好</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2011 - March 2013</span>
@@ -129,6 +129,17 @@
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">高中</h3>
+            <div class="subheading mb-3">確立方向，挑戰自我</div>
+            <p></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2011 - March 2013</span>
+          </div>
+        </div>
+		
+		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">大學</h3>
             <div class="subheading mb-3">Shout! Media Productions</div>
@@ -256,12 +267,73 @@
   <div class="card">
     <div class="card-header">
       <a class="card-link" data-toggle="collapse" href="#collapseOne">
-        Collapsible Group Item #1
+        讀書計畫:淺讀清單
       </a>
     </div>
     <div id="collapseOne" class="collapse show" data-parent="#accordion">
       <div class="card-body">
-        Lorem ipsum..
+<table class="table table-hover">
+				  <thead>
+					<tr>
+					  <th>出版年</th>
+					  <th>作者</th>
+					  <th>書名</th>
+					  <th>出版社</th>
+					  <th>版本</th>
+					  <th>ISBN</th>
+					</tr>
+				  </thead>
+				  <tbody>
+					<tr>
+					  <td>2017</td>
+					  <td>林頌堅</td>
+					  <td>以開放資料的教師學術專長彙整表為基礎之學科標準分類分析</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十四卷第一期</td>
+					  <td>69~95</td>
+					</tr>
+					<tr>
+					  <td>2015</td>
+					  <td>林頌堅</td>
+					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十二卷第三期</td>
+					  <td>269~298</td>
+					</tr>
+					<tr>
+					  <td>2014</td>
+					  <td>林頌堅</td>
+					  <td>資訊科學期刊的主題分布與多樣性研究</td>
+					  <td>圖書資訊學研究</td>
+					  <td>第九卷第一期</td>
+					  <td>171~200</td>
+					</tr>
+					<tr>
+					  <td>2014</td>
+					  <td>林頌堅</td>
+					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十一卷第四期</td>
+					  <td>499~523</td>
+					</tr>
+					<tr>
+					  <td>2013</td>
+					  <td>林頌堅</td>
+					  <td>利用網路結構分析的研究主題視覺化</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十卷第四期</td>
+					  <td>565~596</td>
+					</tr>
+					<tr>
+					  <td>2012</td>
+					  <td>林頌堅</td>
+					  <td>資訊傳播學領域的研究主題發展分析</td>
+					  <td>資訊傳播研究</td>
+					  <td>第二卷第二期</td>
+					  <td>1~20</td>
+					</tr>
+				  </tbody>
+				</table>
       </div>
     </div>
   </div>
@@ -269,12 +341,73 @@
   <div class="card">
     <div class="card-header">
       <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-        Collapsible Group Item #2
+        讀書計畫:精讀清單
       </a>
     </div>
     <div id="collapseTwo" class="collapse" data-parent="#accordion">
       <div class="card-body">
-        Lorem ipsum..
+<table class="table table-hover">
+				  <thead>
+					<tr>
+					  <th>出版年</th>
+					  <th>作者</th>
+					  <th>書名</th>
+					  <th>出版社</th>
+					  <th>版本</th>
+					  <th>ISBN</th>
+					</tr>
+				  </thead>
+				  <tbody>
+					<tr>
+					  <td>2017</td>
+					  <td>林頌堅</td>
+					  <td>以開放資料的教師學術專長彙整表為基礎之學科標準分類分析</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十四卷第一期</td>
+					  <td>69~95</td>
+					</tr>
+					<tr>
+					  <td>2015</td>
+					  <td>林頌堅</td>
+					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十二卷第三期</td>
+					  <td>269~298</td>
+					</tr>
+					<tr>
+					  <td>2014</td>
+					  <td>林頌堅</td>
+					  <td>資訊科學期刊的主題分布與多樣性研究</td>
+					  <td>圖書資訊學研究</td>
+					  <td>第九卷第一期</td>
+					  <td>171~200</td>
+					</tr>
+					<tr>
+					  <td>2014</td>
+					  <td>林頌堅</td>
+					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十一卷第四期</td>
+					  <td>499~523</td>
+					</tr>
+					<tr>
+					  <td>2013</td>
+					  <td>林頌堅</td>
+					  <td>利用網路結構分析的研究主題視覺化</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十卷第四期</td>
+					  <td>565~596</td>
+					</tr>
+					<tr>
+					  <td>2012</td>
+					  <td>林頌堅</td>
+					  <td>資訊傳播學領域的研究主題發展分析</td>
+					  <td>資訊傳播研究</td>
+					  <td>第二卷第二期</td>
+					  <td>1~20</td>
+					</tr>
+				  </tbody>
+				</table>
       </div>
     </div>
   </div>
@@ -282,12 +415,73 @@
   <div class="card">
     <div class="card-header">
       <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-        Collapsible Group Item #3
+        讀書計畫:未來清單
       </a>
     </div>
     <div id="collapseThree" class="collapse" data-parent="#accordion">
       <div class="card-body">
-        Lorem ipsum..
+<table class="table table-hover">
+				  <thead>
+					<tr>
+					  <th>出版年</th>
+					  <th>作者</th>
+					  <th>書名</th>
+					  <th>出版社</th>
+					  <th>版本</th>
+					  <th>ISBN</th>
+					</tr>
+				  </thead>
+				  <tbody>
+					<tr>
+					  <td>2017</td>
+					  <td>林頌堅</td>
+					  <td>以開放資料的教師學術專長彙整表為基礎之學科標準分類分析</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十四卷第一期</td>
+					  <td>69~95</td>
+					</tr>
+					<tr>
+					  <td>2015</td>
+					  <td>林頌堅</td>
+					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十二卷第三期</td>
+					  <td>269~298</td>
+					</tr>
+					<tr>
+					  <td>2014</td>
+					  <td>林頌堅</td>
+					  <td>資訊科學期刊的主題分布與多樣性研究</td>
+					  <td>圖書資訊學研究</td>
+					  <td>第九卷第一期</td>
+					  <td>171~200</td>
+					</tr>
+					<tr>
+					  <td>2014</td>
+					  <td>林頌堅</td>
+					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十一卷第四期</td>
+					  <td>499~523</td>
+					</tr>
+					<tr>
+					  <td>2013</td>
+					  <td>林頌堅</td>
+					  <td>利用網路結構分析的研究主題視覺化</td>
+					  <td>教育資料與圖書館學</td>
+					  <td>第五十卷第四期</td>
+					  <td>565~596</td>
+					</tr>
+					<tr>
+					  <td>2012</td>
+					  <td>林頌堅</td>
+					  <td>資訊傳播學領域的研究主題發展分析</td>
+					  <td>資訊傳播研究</td>
+					  <td>第二卷第二期</td>
+					  <td>1~20</td>
+					</tr>
+				  </tbody>
+				</table>
       </div>
     </div>
   </div>
