--- a/new 2 表格.html
+++ b/new 2 表格.html
@@ -3,10 +3,10 @@
 					<tr>
 					  <th>出版年</th>
 					  <th>作者</th>
-					  <th>論文名稱</th>
-					  <th>期刊</th>
-					  <th>卷期</th>
-					  <th>頁碼</th>
+					  <th>書名</th>
+					  <th>出版社</th>
+					  <th>版本</th>
+					  <th>ISBN</th>
 					</tr>
 				  </thead>
 				  <tbody>
