--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Project One</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-          <a class="btn btn-primary" href="#">View Project</a>
+          <h3>座右銘</h3>
+          <p>奇蹟這東西，只會發生在相信奇蹟的人身上，如果它沒發生，那一定是你不夠相信它，常懷希望，樂觀前進吧</p>
+
         </div>
       </div>
       <!-- /.row -->
@@ -114,40 +114,40 @@
             <p>國中時，我除了保持每日閱讀的習慣，還為了訓練膽識加入了說唱藝術社並成為社長，在這段訓練時光中我的台上本領日趨精進，不只台風逐漸穩健，人際關係也逐漸變好</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">September 2013 - September 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">高中</h3>
-            <div class="subheading mb-3">確立方向，挑戰自我</div>
-            <p></p>
+            <div class="subheading mb-3">確立志向，向人生前進</div>
+            <p>上高中後，讀書和思考成為我每天的習慣，但當書漸漸地滿足不了我時，我將目標放在了新聞上，久而久之它傳播的便利性與效率深深地把我吸引住了，於是我決定將傳播當成第一志願去追求</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">September 2016 - September 2018</span>
           </div>
         </div>
 		
 		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">大學</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <div class="subheading mb-3">夢想的起點</div>
+            <p>如願進入傳播相關科系後，我開始培養其他興趣，例如卡牌遊戲，也成功擔任世新大學卡牌研究社活動幹部職位並多次舉辦比賽</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">September 2018 - </span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary"></span>
           </div>
         </div>
 
