內容填充完畢

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="subheading mb-5">高雄市新興區錦田路101巷9-3號0936160386
           <a href="mailto:name@email.com">w0987562477@gmail.com</a>
         </div>
-        <p class="lead mb-5">經典廢宅 平時打game吃吃睡睡看看小說I usually playing video games,eating snacks,sleeping and reading novels in my free time</p>
+        <p class="lead mb-5">經典阿宅 平時在家打game吃吃睡睡看看書I usually playing video games,eating snacks,sleeping and reading books in my free time</p>
 
       </div>
     </section>
@@ -159,28 +159,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">學歷</h2>
+        <h2 class="mb-5">求學心得</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">世新大學第一學期</h3>
+            <div class="subheading mb-3">自由</div>
+            <div>上大學後最讓我驚豔的是可以自己選擇想修的科目，自訂課表也讓時間運用更靈活，除此之外還能參加多個社團，著實令我高興</div>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">September 2018 - </span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0"></h3>
+            <div class="subheading mb-3"></div>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary"></span>
           </div>
         </div>
 
@@ -193,60 +193,23 @@
       <div class="w-100">
         <h2 class="mb-5">專長</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
+        <div class="subheading mb-3">打牌，熬夜</div>
 
-        <div class="subheading mb-3">Workflow</div>
+
+        <div class="subheading mb-3">卡牌遊戲標準致勝步驟</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            1.平復心情</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            2.確認勝利條件</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            3.制定策略</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            4.祈禱</li>
         </ul>
       </div>
     </section>
@@ -276,51 +239,51 @@
 				  <tbody>
 					<tr>
 					  <td>2017</td>
-					  <td>林頌堅</td>
-					  <td>以開放資料的教師學術專長彙整表為基礎之學科標準分類分析</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十四卷第一期</td>
-					  <td>69~95</td>
+					  <td> Ursula K. Le Guin</td>
+					  <td>地海六部曲</td>
+					  <td>木馬</td>
+					  <td>初版</td>
+					  <td>8667106506069</td>
 					</tr>
 					<tr>
-					  <td>2015</td>
-					  <td>林頌堅</td>
-					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十二卷第三期</td>
-					  <td>269~298</td>
+					  <td>2017</td>
+					  <td>Jules Gabriel Verne</td>
+					  <td>海底兩萬里</td>
+					  <td>木馬</td>
+					  <td>初版</td>
+					  <td>9789863593843</td>
 					</tr>
 					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>資訊科學期刊的主題分布與多樣性研究</td>
-					  <td>圖書資訊學研究</td>
-					  <td>第九卷第一期</td>
-					  <td>171~200</td>
+					  <td>2018</td>
+					  <td> Jules Gabriel Verne</td>
+					  <td>地心歷險記</td>
+					  <td>野人</td>
+					  <td>初版</td>
+					  <td>9789863842965</td>
 					</tr>
 					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十一卷第四期</td>
-					  <td>499~523</td>
+					  <td>2017</td>
+					  <td> Daniel Defoe</td>
+					  <td>魯賓遜漂流記</td>
+					  <td>自由之丘</td>
+					  <td>初版</td>
+					  <td>9789869423823</td>
 					</tr>
 					<tr>
-					  <td>2013</td>
-					  <td>林頌堅</td>
-					  <td>利用網路結構分析的研究主題視覺化</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十卷第四期</td>
-					  <td>565~596</td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
 					</tr>
 					<tr>
-					  <td>2012</td>
-					  <td>林頌堅</td>
-					  <td>資訊傳播學領域的研究主題發展分析</td>
-					  <td>資訊傳播研究</td>
-					  <td>第二卷第二期</td>
-					  <td>1~20</td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
 					</tr>
 				  </tbody>
 				</table>
@@ -349,52 +312,52 @@
 				  </thead>
 				  <tbody>
 					<tr>
-					  <td>2017</td>
-					  <td>林頌堅</td>
-					  <td>以開放資料的教師學術專長彙整表為基礎之學科標準分類分析</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十四卷第一期</td>
-					  <td>69~95</td>
-					</tr>
-					<tr>
 					  <td>2015</td>
-					  <td>林頌堅</td>
-					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十二卷第三期</td>
-					  <td>269~298</td>
+					  <td> Margaret Mitchell</td>
+					  <td>飄</td>
+					  <td>麥田</td>
+					  <td>初版</td>
+					  <td>9789863442387</td>
 					</tr>
 					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>資訊科學期刊的主題分布與多樣性研究</td>
-					  <td>圖書資訊學研究</td>
-					  <td>第九卷第一期</td>
-					  <td>171~200</td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
 					</tr>
 					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十一卷第四期</td>
-					  <td>499~523</td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
 					</tr>
 					<tr>
-					  <td>2013</td>
-					  <td>林頌堅</td>
-					  <td>利用網路結構分析的研究主題視覺化</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十卷第四期</td>
-					  <td>565~596</td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
 					</tr>
 					<tr>
-					  <td>2012</td>
-					  <td>林頌堅</td>
-					  <td>資訊傳播學領域的研究主題發展分析</td>
-					  <td>資訊傳播研究</td>
-					  <td>第二卷第二期</td>
-					  <td>1~20</td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					</tr>
+					<tr>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
 					</tr>
 				  </tbody>
 				</table>
@@ -423,52 +386,52 @@
 				  </thead>
 				  <tbody>
 					<tr>
-					  <td>2017</td>
-					  <td>林頌堅</td>
-					  <td>以開放資料的教師學術專長彙整表為基礎之學科標準分類分析</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十四卷第一期</td>
-					  <td>69~95</td>
+					  <td>2011</td>
+					  <td> William Golding</td>
+					  <td>蒼蠅王</td>
+					  <td>高寶</td>
+					  <td>初版</td>
+					  <td>9789861856094</td>
 					</tr>
 					<tr>
-					  <td>2015</td>
-					  <td>林頌堅</td>
-					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十二卷第三期</td>
-					  <td>269~298</td>
-					</tr>
-					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>資訊科學期刊的主題分布與多樣性研究</td>
-					  <td>圖書資訊學研究</td>
-					  <td>第九卷第一期</td>
-					  <td>171~200</td>
-					</tr>
-					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十一卷第四期</td>
-					  <td>499~523</td>
+					  <td>2007</td>
+					  <td> J. D. Salinger</td>
+					  <td>麥田捕手</td>
+					  <td>麥田</td>
+					  <td>初版</td>
+					  <td>9789861732091</td>
 					</tr>
 					<tr>
 					  <td>2013</td>
-					  <td>林頌堅</td>
-					  <td>利用網路結構分析的研究主題視覺化</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十卷第四期</td>
-					  <td>565~596</td>
+					  <td> John Steinbeck</td>
+					  <td>憤怒的葡萄</td>
+					  <td>春天</td>
+					  <td>初版</td>
+					  <td>9789866000805</td>
 					</tr>
 					<tr>
-					  <td>2012</td>
-					  <td>林頌堅</td>
-					  <td>資訊傳播學領域的研究主題發展分析</td>
-					  <td>資訊傳播研究</td>
-					  <td>第二卷第二期</td>
-					  <td>1~20</td>
+					  <td>2001</td>
+					  <td> F. Scott Fitzgerald</td>
+					  <td>大亨小傳</td>
+					  <td>時報</td>
+					  <td>初版</td>
+					  <td>957133524X</td>
+					</tr>
+					<tr>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					</tr>
+					<tr>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
+					  <td></td>
 					</tr>
 				  </tbody>
 				</table>
@@ -480,8 +443,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">興趣</h2>
-        <p>宅</p>
-        <p class="mb-0">宅</p>
+        <p>用腳探索城市:即使只是一座城市，每天的樣貌也大不相同，探索這些變化，用腳確認自己沒漏掉任何細節</p>
+        <p class="mb-0">享受美食:直接用舌頭去進行物質享受能帶給我最直接的歡愉</p>
       </div>
     </section>
 
@@ -493,30 +456,30 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            工作</li>
+            40歲前擁有自己的房子</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            家庭</li>
+            30歲前結婚</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            <sup></sup>
+            一輩子靠自己的腳和大眾運輸行動</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            <sup></sup>
+            活到大約80歲</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+            <sup></sup>
+            在睡夢中死去</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
+            <sup></sup>
+            </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            <sup></sup>
+            </li>
         </ul>
       </div>
     </section>
